--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mi Sitio Web Personal</title>
+    <title>Practico n°1- git </title>
     <link rel="stylesheet" href="estilos.css">
   </head>
   <body>
