--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <h1>Mi Sitio Web Personal</h1>
+      <h1>Hola Domingo :)</h1>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
