--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <main>
       <section id="inicio">
         <h2>En este espacio podrás ver las prácticas de GIT </h2>
-        <p>En este sitio podrás encontrar información sobre mí, mis habilidades y mi experiencia laboral.</p>
+        <p> ¿Qué es el Git y para qué sirve?
+          Git es un sistema de control de versiones distribuido, lo que significa que un clon local del proyecto es un repositorio de control de versiones completo. Estos repositorios locales plenamente funcionales permiten trabajar sin conexión o de forma remota con facilidad.</p>
       </section>
     </main>
 
