--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <header>
-      <h1>Hola Domingo :)</h1>
+      <h1>-GIT</h1>
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="sobre-mi.html">Sobre Mí</a></li>
+          <li><a href="sobre-mi.html">-Historia </a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
