--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Acerca de mí</title>
+    <title>Historia de GIT</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
   </head>
   <body>
@@ -11,7 +11,7 @@
       <nav>
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="sobre-mi.html">Acerca de mí</a></li>
+          <li><a href="sobre-mi.html">Historia</a></li>
           <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
@@ -19,8 +19,8 @@
     <main>
       <section>
         <h2>Mi historia</h2>
-        <p>Soy [tu nombre], y me apasiona [tu pasión o profesión]. Desde pequeño/a siempre he tenido curiosidad por [tema relacionado]. Después de estudiar [tus estudios], empecé a trabajar en [tu primer trabajo relacionado con tu carrera]. A partir de entonces, he tenido la oportunidad de trabajar en varios proyectos interesantes y desafiantes, como [lista algunos proyectos destacados].</p>
-        <p>Actualmente, [describe brevemente tu trabajo actual o lo que estás haciendo en la actualidad]. Me gusta seguir aprendiendo y mejorando mis habilidades, y en mi tiempo libre disfruto de [tus pasatiempos o intereses].</p>
+        <p>¿Cómo Surgió Git</p>
+        <p> Git es un proyecto de código abierto maduro y con un mantenimiento activo que desarrolló originalmente Linus Torvalds, el famoso creador del kernel del sistema operativo Linux, en 2005.</p>
       </section>
       <section>
         <h2>Mis habilidades</h2>
